# BeastLounge

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Jamfile  README.md
app/: CMakeLists.txt  main.cpp
client/: README.md  settings.json
include/boost/beast/: src_extra.hpp
include/boost/beast/_experimental/: json.hpp
include/boost/beast/_experimental/core/: expected.hpp
include/boost/beast/_experimental/json/: allocator.hpp  array.hpp  assign_string.hpp  assign_vector.hpp  basic_parser.hpp  beast-json-value.natvis  error.hpp  exchange.hpp  iterator.hpp  key_param.hpp  kind.hpp  number.hpp  object.hpp  parse_file.hpp  parser.hpp  rpc.hpp  serializer.hpp  storage.hpp  string.hpp  types.hpp  value.hpp
include/boost/beast/_experimental/json/detail/: access.hpp  basic_parser.hpp  has_assign_value.hpp  is_specialized.hpp  stack.hpp  storage_adaptor.hpp  unspecialized.hpp  value.hpp  value_impl.hpp  varint.hpp  varint.ipp
include/boost/beast/_experimental/json/impl/: allocator.hpp  array.hpp  array.ipp  basic_parser.hpp  basic_parser.ipp  error.hpp  error.ipp  exchange.hpp  iterator.hpp  iterator.ipp  number.hpp  number.ipp  object.hpp  object.ipp  parse_file.ipp  parser.hpp  parser.ipp  rpc.hpp  rpc.ipp  serializer.hpp  serializer.ipp  storage.hpp  storage.ipp  value.hpp  value.ipp
include/lounge/: bind_front.hpp  bind_mf.hpp  channel.hpp  chat_service.hpp  config.hpp  executor_type.hpp  log.hpp  message.hpp  rpc.hpp  server.hpp  service.hpp  user.hpp  user_data.hpp  user_service.hpp
include/lounge/detail/: config.hpp  key_type.hpp
include/lounge/impl/: channel.hpp  server.hpp  user_service.hpp
server/: CMakeLists.txt  Jamfile  agent.cpp  agent.hpp  blackjack.cpp  channel.cpp  channel.hpp  channel_list.cpp  channel_list.hpp  chat_service.cpp  config.hpp  config.json  dispatcher.cpp  dispatcher.hpp  http_session.cpp  http_session.hpp  ident_service.cpp  listener.cpp  listener.hpp  logger.cpp  logger.hpp  main.cpp  message.cpp  message.hpp  room.cpp  room.hpp  rpc.cpp  rpc.hpp  server.cpp  server.hpp  service.hpp  session.hpp  settings.cpp  settings.hpp  shared_state.cpp  shared_state.hpp  system.cpp  system_channel.cpp  system_channel.hpp  test.json  (+10 more)
server/blackjack/: game.hpp
server/core/: blackjack.cpp  channel.cpp  channel.hpp  config.hpp  listener.hpp  logger.cpp  logger.hpp  main.cpp  message.hpp  room.cpp  rpc.hpp  server.cpp  server.hpp  service.hpp  types.hpp  user.hpp  utility.hpp
src/: any_connection.cpp  any_connection.hpp  buffers_generator.hpp  channel.cpp  channel_service.cpp  channel_service.hpp  chat_service.cpp  http_connection.cpp  http_connection.hpp  http_generator.hpp  http_service.cpp  http_service.hpp  listener.cpp  listener.hpp  log.cpp  log_service.cpp  log_service.hpp  make_message.hpp  message.cpp  server.cpp  service.cpp  sigint_service.cpp  sigint_service.hpp  socket_type.hpp  string_view_hash.hpp  user_service.cpp  ws_connection.cpp  ws_connection.hpp
static/: CMakeLists.txt  config.json  dockerconfig.json
static/wwwroot/: admin.html  admin.js  data_64K.html  index.css  index.html  index.js  lounge-chat.js
test/: CMakeLists.txt  Jamfile  empty.cpp  lib_beast_extra.cpp  lib_json.cpp  test_suite.hpp
test/beast/: CMakeLists.txt  Jamfile
test/beast/core/: CMakeLists.txt  Jamfile  expected.cpp  src.cpp
test/beast/json/: CMakeLists.txt  Jamfile  _detail_stack.cpp  allocator.cpp  array.cpp  assign_string.cpp  assign_vector.cpp  basic_parser.cpp  error.cpp  exchange.cpp  iterator.cpp  json.cpp  key_param.cpp  kind.cpp  number.cpp  object.cpp  parse_file.cpp  parser.cpp  rpc.cpp  serializer.cpp  src.cpp  storage.cpp  string.cpp  types.cpp  value.cpp
test/server/: CMakeLists.txt  Jamfile  blackjack.cpp  message_test.cpp
tools/: ci_toolchain.cmake  docker-run.sh  get-boost.sh  get_boost.sh
