install(
    FILES dockerconfig.json
    DESTINATION ${CMAKE_INSTALL_SYSCONFDIR}/beast-lounge
    PERMISSIONS OWNER_READ GROUP_READ WORLD_READ
)

install(
    DIRECTORY wwwroot/
    DESTINATION ${CMAKE_INSTALL_LOCALSTATEDIR}/beast-lounge/www
    FILE_PERMISSIONS OWNER_READ GROUP_READ WORLD_READ
    DIRECTORY_PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE

)
